Plugin Name: Custom Sidebars Pro
Author: Javier Marquez (Incsub), Philipp Stracker (Incsub), Marcin Pietrzak (Incsub)
Buildtime: BUILDTIME

Change Log:
----------------------------------------------------------------------

3.0.1.0 ( 2017-xx-xx )
- Fixed UX problem with "plus" icon on visibility options.

3.0.0.1 ( 2017-03-08 )
- Fixed a problem with wp_enqueue_script wich was called too early.
- Fixed a problem with advertising, which should stay close when you close it.

3.0.0 ( 2017-03-06 )
- Fixed a conflicting with other plugins.
- Improved functionality, free and pro versions have now the same functionality. The only difference is that the free version includes ads.

2.1.2.0 ( 2017-02-06 )
- Fixed a problem with empty selectors.
- Remove unnecessary HTTP header - it is only needed when we run cs-explains.
- Update Dash notice.

2.1.1.9 ( 2016-12-29 )
- Fixed export problem, when two or more widget has the same name.
- Fixed problem with import widgets created before Custom Sidebars plugin was installed.
- Fixed problem with sidebars on Front Page.

2.1.1.8 ( 2016-12-27 )
- Added support and widgets links on the plugins page.
- Fixed few "Undefined index" warnings.
- Improved import preview screen.
- Improved RTL languages on widgets screen.

2.1.1.7 ( 2016-11-23 )
- Rollback last change with front page.

2.1.1.6 ( 2016-11-21 )
- Fixed a bug when we try to use to get property of non-object in "maybe_display_widget()".
- If the front page is a page, then we have now the same rules like we have on a page.

2.1.1.5 ( 2016-11-07 )
- Added new filter "cs_replace_post_type" to filter post type inside function "determine_replacement()".

2.1.1.4 ( 2016-10-24 )
- Fixed problem with sorting and filtering.

2.1.1.3 ( 2016-10-13 )
- Added check if there the function "mb_strtolower".

2.1.1.2 ( 2016-10-10 )
- Sidebars are now sorted by name.

2.1.1.1 ( 2016-09-26 )
----------------------------------------------------------------------