@@ -1,9 +1,4 @@
-@mixin border-radius($radius) {
-    -webkit-border-radius: $radius;
-    -moz-border-radius: $radius;
-    -ms-border-radius: $radius;
-    border-radius: $radius;
-}
+@import 'mixins';
 
 /**
  * =============================================================================
@@ -231,40 +226,6 @@
 		padding-right: 20px;
 	}
 
-	.custom-sidebars-wp-checkup {
-		@include border-radius( 4px );
-		align-items: center;
-		background: #fff url(../img/heart.png) no-repeat 0 50%;
-		border: 0;
-		display: flex;
-		min-height: 100px;
-		padding-left: 135px;
-		justify-content: space-between;
-		form {
-			white-space: nowrap;
-			input {
-				border: 0;
-				@include border-radius( 4px );
-			}
-			input[type=text] {
-				background-color: #f2f2f2;
-				padding: 15px 14px;
-			}
-			input[type=submit] {
-				background-color: #17a8e3;
-				color: #fff;
-				padding: 15px 35px;
-				text-transform: uppercase;
-				margin-left: 10px;
-			}
-		}
-		p {
-			font-size: 1.2em;
-			b {
-				color: #840006;
-			}
-		}
-	}
 	.sidebars-column-1 {
 		.inner {
 			.custom-sidebars-upfront {
